--- a/.gitignore
+++ b/.gitignore
@@ -33,13 +33,16 @@ yarn-error.log*
 # vercel
 .vercel
 
+pages
 functions/index.ts
 .functions
 .firebase
 *.log
-.firebaserc
 firebase.json
-firestore.indexes.json
-firestore.rules
-remoteconfig.template.json
-storage.rules
+masmott.ts
+next-env.d.ts
+next.config.js
+cypress.json
+.masmott
+package.json
+tsconfig.json
